add register and sign in swagger docs
